--- a/src/pages/contatos/contatos.html
+++ b/src/pages/contatos/contatos.html
@@ -16,6 +16,17 @@
         <button ion-button round (click)="ligarFixo()">Ligar no fixo</button>
     </ion-item>
 
+    <form>
+        <ion-item>
+            <ion-label color="primary" position="floating">Deixar Recado</ion-label>
+            <ion-input type="text" required></ion-input>
+        </ion-item>
+        <ion-item>
+            <button ion-button round>Enviar</button>
+        </ion-item>
+    </form>
+
+
 
     <button ion-button secondary menuToggle>Ver Menu</button>
 </ion-content>
