--- a/src/pages/contatos/contatos.html
+++ b/src/pages/contatos/contatos.html
@@ -22,7 +22,7 @@
             <ion-input type="text" required></ion-input>
         </ion-item>
         <ion-item>
-            <button ion-button round>Enviar</button>
+            <button ion-button round (click)="enviarSMS()">Enviar SMS</button>
         </ion-item>
     </form>
 
