--- a/src/pages/contatos/contatos.html
+++ b/src/pages/contatos/contatos.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-navbar>
         <button ion-button menuToggle>
-            <ion-icon name="contatos"></ion-icon>
+            <ion-icon name="menu"></ion-icon>
         </button>
         <ion-title>Contatos</ion-title>
     </ion-navbar>
