--- a/src/pages/experiencia/experiencia.html
+++ b/src/pages/experiencia/experiencia.html
@@ -9,8 +9,8 @@
 
 <ion-content padding>
 
-    <div class="bar bar-header">
-        <h2 class="title"><strong>ANALISTA DE DADOS</strong></h2>
+    <div class="bar bar-header" >
+        <h2 style="color: rgb(44, 41, 8)" class="title"><strong>ANALISTA DE DADOS</strong></h2>
     </div>
     <div class="bar bar-subheader">
         <h4 class="title"><strong>MCI Brasil</strong> - Junho 2018 - Atualmente</h4>
