--- a/src/pages/experiencia/experiencia.html
+++ b/src/pages/experiencia/experiencia.html
@@ -13,7 +13,7 @@
         <h2 style="color: rgb(44, 41, 8)" class="title"><strong>ANALISTA DE DADOS</strong></h2>
     </div>
     <div class="bar bar-subheader">
-        <h4 class="title"><strong>MCI Brasil</strong> - Junho 2018 - Atualmente</h4>
+        <h4 style="color: rgb(44, 41, 8)" class="title"><strong>MCI Brasil</strong> - Junho 2018 - Atualmente</h4>
     </div>
     <p>Atua como analista de dados a cargo de organizar toda a parte de troca de informações 
         entre areas e sistemas, atuando também com desenvolvimento em Java Web a fim de 
@@ -23,10 +23,10 @@
     <hr>
     <br>
     <div class="bar bar-header">
-        <h2 class="title"><strong>ANALISTA DE SUPORTE PLENO</strong></h2>
+        <h2 style="color: rgb(44, 41, 8)" class="title"><strong>ANALISTA DE SUPORTE PLENO</strong></h2>
     </div>
     <div class="bar bar-subheader">
-        <h4 class="title"><strong>EY</strong> - Junho 2014 - Junho 2018</h4>
+        <h4 style="color: rgb(44, 41, 8)" class="title"><strong>EY</strong> - Junho 2014 - Junho 2018</h4>
     </div>
     <p>Atuou de 2014 a 2018 como analista de suporte remoto a sistemas da EY 
         em plataforma Windows, Mac, IOS e Android. Atualmente também é responsável 
@@ -40,10 +40,10 @@
     <br>
 
     <div class="bar bar-header">
-        <h2 class="title"><strong>ANALISTA DE SERVICE DESK</strong></h2>
+        <h2 style="color: rgb(44, 41, 8)" class="title"><strong>ANALISTA DE SERVICE DESK</strong></h2>
     </div>
     <div class="bar bar-subheader">
-        <h4 class="title"><strong>Nestlé</strong> - Outubro 2013 - Maio 2014</h4>
+        <h4 style="color: rgb(44, 41, 8)" class="title"><strong>Nestlé</strong> - Outubro 2013 - Maio 2014</h4>
     </div>
     <p>Atuou com suporte a problemas e solicitações diárias em escritório, 
         com pacote Office, acessos a rede ou sistemas específicos, dúvidas 
@@ -55,10 +55,10 @@
     <br>
 
     <div class="bar bar-header">
-        <h2 class="title"><strong>COORDENADOR DE IMPLANTAÇÃO</strong></h2>
+        <h2 style="color: rgb(44, 41, 8)" class="title"><strong>COORDENADOR DE IMPLANTAÇÃO</strong></h2>
     </div>
     <div class="bar bar-subheader">
-        <h4 class="title"><strong>Flash Courier</strong> - Novembro 2008 - Outubro 2013</h4>
+        <h4 style="color: rgb(44, 41, 8)" class="title"><strong>Flash Courier</strong> - Novembro 2008 - Outubro 2013</h4>
     </div>
     <p>Atuou como Coordenador de Implantação e homologador de sistemas no 
         ramo logístico atuando com levantamento de informações e requisitos 
@@ -75,10 +75,10 @@
     <br>
     
         <div class="bar bar-header">
-        <h2 class="title"><strong>ASSISTENTE ADMINISTRATIVO</strong></h2>
+        <h2 style="color: rgb(44, 41, 8)" class="title"><strong>ASSISTENTE ADMINISTRATIVO</strong></h2>
     </div>
     <div class="bar bar-subheader">
-        <h4 class="title"><strong>Deloitte Touche Tohmatsu</strong> - Outubro 2006 - Julho 2008</h4>
+        <h4 style="color: rgb(44, 41, 8)" class="title"><strong>Deloitte Touche Tohmatsu</strong> - Outubro 2006 - Julho 2008</h4>
     </div>
     <p>Atuou como office boy interno Menor Aprendiz, responsável 
         pelo controle de material geral de escritório e auxilio 
