--- a/src/pages/habilidades/habilidades.html
+++ b/src/pages/habilidades/habilidades.html
@@ -9,16 +9,10 @@
 
 <ion-content padding>
 
-    <div style="height: 200%;width: 200%">
-        <ion-icon name="logo-html5"></ion-icon>
-        <ion-icon name="logo-css3"></ion-icon>
-        <ion-icon name="logo-javascript"></ion-icon>
-        <ion-icon name="logo-java"></ion-icon>
-        <ion-icon name="logo-github"></ion-icon>
-        <ion-icon name="logo-android"></ion-icon>
-        <ion-icon name="logo-apple"></ion-icon>
-        <ion-icon name="logo-tux"></ion-icon>
-    </div>
+        <ion-img width="100%" height="100%" src="assets/imgs/habilidades.png"></ion-img>
+
+
+
 
     <button ion-button secondary menuToggle>Ver Menu</button>
 </ion-content>
