--- a/src/pages/educacao/educacao.html
+++ b/src/pages/educacao/educacao.html
@@ -14,14 +14,39 @@
         <div class="item item-avatar">
             <img src="assets/icon/senac.png" style='width: 25%;height: 25%;'>
             <h3><strong>TECNÓLOGO EM ANÁLISE</strong></h3>
-            <p>Tecnologia em Análise e Desenvolvimento de Sistemas</p>
+            <p><strong>Tecnologia em Análise e Desenvolvimento de Sistemas</strong></p>
         </div>
 
         <div class="item item-body">
-           <p>
+            <a href="http://www.pauloportfolio.com/Projetos/BlackJack.zip" style="text-decoration:none;">
+                Projeto Semestre 1 (BlackJack - Java Desktop)
+            </a>
+            <p></p>
+            <a href="https://github.com/phbrazil/LojaBrinquedos" style="text-decoration:none;">
+                Projeto Semestre 2 (Loja de Brinquedos - Java Desktop)
+            </a>
+            <p></p>
+            <a href="https://github.com/phbrazil/ProjetoPI23_petshop" style="text-decoration:none;">
+                Projeto Semestre 3 (PetShop - Java Web)
+            </a>
+            <p></p>
+            <a href="http://opportunity-web.com.br/" target="_blank" style="text-decoration:none;">
+                Sistema de gerenciamento de projetos e prospecções
+            </a>
+            <p></p>
+            <a href="http://40.76.62.251/orbis" target="_blank" style="text-decoration:none;">
+                Página de venda de Pacotes de Excursão - Em desenvolvimento
+            </a>
 
-           </p>
+            <p></p>
+
+            <p><strong>Cursando</strong></p>
         </div>
+        
+        <div>
+            <span>Janeiro 2017 - Junho 2019  <ion-icon name="school"></ion-icon></span>
+        </div>
+        <p></p>
 
     </div>
 
