--- a/src/pages/cursos/cursos.html
+++ b/src/pages/cursos/cursos.html
@@ -8,11 +8,83 @@
 </ion-header>
 
 <ion-content padding>
-    <h3>Cursos & Certificados</h3>
+    <h3>Cursos & Certificados <ion-icon name="trophy"></ion-icon></h3>
+    <ul class="fa-ul mb-0">
+            <li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                <a style="text-decoration: none" href="assets/Certificados/Big Data Foundation Certificate Paulo Henrique Bezerra.pdf" target="blank">
+                    Big Data Foundation - ITCerts - License 5F5F1BB</a></li>
+        </ul>
 
-    <p>
-        <button ion-button round (click)="openLocalPdf()">Senai</button>
-    </p>
+        <ul class="fa-ul mb-0">
+            <li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                <a style="text-decoration: none" href="assets/Certificados/InfoSec Foundation Certificate Paulo Henrique Bezerra.pdf" target="blank">InfoSec Foundation - ITCerts - License 5F5F1BC</a></li>
+        </ul>
+
+        <ul class="fa-ul mb-0">
+            <li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                <a style="text-decoration: none" href="assets/Certificados/Cloud Security Foundation Certificate Paulo Henrique Bezerra.pdf" target="blank">Cloud Security Foundation - ITCerts - License 5F5F1BD</a></li>
+        </ul>    
+        <ul class="fa-ul mb-0">
+            <li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                <a style="text-decoration: none" href="assets/Certificados/Data Security Specialist Certificate Paulo Henrique Bezerra.pdf" target="blank">Data Security Specialist - ITCerts - License 5F5F1BE</a></li>
+        </ul>    
+
+        <ul class="fa-ul mb-0">
+            <li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                <a style="text-decoration: none" href="assets/Certificados/SenacProgramadorIntermediario.pdf" target="blank">Programador de Sistemas Intermediário - Senac</a></li>
+        </ul>
+
+        <ul class="fa-ul mb-0">
+            <li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                <a style="text-decoration: none" href="assets/Certificados/2000306064-ITILFGB.pdf" target="blank">ITIL V3 Foundations - License 02345622-01-7N9D</a></li>
+        </ul>
+
+        <ul class="fa-ul mb-0">
+            <li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                English Language - CNA</li>
+        </ul>
+        <ul class="fa-ul mb-0">
+            <li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                <a style="text-decoration: none" href="assets/Certificados/EYU CBS_COBIT 5.JPG" target="blank">COBIT 5 Foundations - Green Treinamentos</a></li>
+        </ul>
+
+        <ul class="fa-ul mb-0">
+            <li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                <a style="text-decoration: none" href="assets/Certificados/Paulo Bezerra - EYU E_EXCEL CHARTING (DASHBOARD) - 2016-09-09.gif" target="blank">Excel Charting - EY University</a></li>
+        </ul>
+
+        <ul class="fa-ul mb-0">
+            <li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                <a style="text-decoration: none" href="assets/Certificados/EXCEL_VBA_CERTIFICADO.gif" target="blank">Excel VBA - EY University</a></li>
+        </ul>
+
+        <ul class="fa-ul mb-0">
+            <li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                Excel - Nível Avançado - EY University</li>
+        </ul>
+        <ul class="fa-ul mb-0">
+            <li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                <a style="text-decoration: none" href="assets/Certificados/Logica_impacta.JPG" target="blank">Lógica em Programação - Impacta</a></li>
+        </ul>
+
+        <ul class="fa-ul mb-0">
+            <li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                <a style="text-decoration: none" href="assets/Certificados/CERTIFICADO_SENAI.pdf" target="blank">Competência Transversal - Tecnologia da informação e da comunicação - SENAI</a></li>
+        </ul>
+
 
     <button ion-button secondary menuToggle>Ver Menu</button>
 </ion-content>
