--- a/src/pages/cursos/cursos.html
+++ b/src/pages/cursos/cursos.html
@@ -12,37 +12,37 @@
     <ul class="fa-ul mb-0">
             <li>
                 <i class="fa-li fa fa-trophy text-warning"></i>
-                <a style="text-decoration: none" href="assets/Certificados/Big Data Foundation Certificate Paulo Henrique Bezerra.pdf" target="blank">
+                <a style="text-decoration: none" href="http://www.pauloportfolio.com/Certificados/Big%20Data%20Foundation%20Certificate%20Paulo%20Henrique%20Bezerra.pdf" target="blank">
                     Big Data Foundation - ITCerts - License 5F5F1BB</a></li>
         </ul>
 
         <ul class="fa-ul mb-0">
             <li>
                 <i class="fa-li fa fa-trophy text-warning"></i>
-                <a style="text-decoration: none" href="assets/Certificados/InfoSec Foundation Certificate Paulo Henrique Bezerra.pdf" target="blank">InfoSec Foundation - ITCerts - License 5F5F1BC</a></li>
+                <a style="text-decoration: none" href="http://www.pauloportfolio.com/Certificados/InfoSec%20Foundation%20Certificate%20Paulo%20Henrique%20Bezerra.pdf" target="blank">InfoSec Foundation - ITCerts - License 5F5F1BC</a></li>
         </ul>
 
         <ul class="fa-ul mb-0">
             <li>
                 <i class="fa-li fa fa-trophy text-warning"></i>
-                <a style="text-decoration: none" href="assets/Certificados/Cloud Security Foundation Certificate Paulo Henrique Bezerra.pdf" target="blank">Cloud Security Foundation - ITCerts - License 5F5F1BD</a></li>
+                <a style="text-decoration: none" href="http://www.pauloportfolio.com/Certificados/Cloud%20Security%20Foundation%20Certificate%20Paulo%20Henrique%20Bezerra.pdf" target="blank">Cloud Security Foundation - ITCerts - License 5F5F1BD</a></li>
         </ul>    
         <ul class="fa-ul mb-0">
             <li>
                 <i class="fa-li fa fa-trophy text-warning"></i>
-                <a style="text-decoration: none" href="assets/Certificados/Data Security Specialist Certificate Paulo Henrique Bezerra.pdf" target="blank">Data Security Specialist - ITCerts - License 5F5F1BE</a></li>
+                <a style="text-decoration: none" href="http://www.pauloportfolio.com/Certificados/Data%20Security%20Specialist%20Certificate%20Paulo%20Henrique%20Bezerra.pdf" target="blank">Data Security Specialist - ITCerts - License 5F5F1BE</a></li>
         </ul>    
 
         <ul class="fa-ul mb-0">
             <li>
                 <i class="fa-li fa fa-trophy text-warning"></i>
-                <a style="text-decoration: none" href="assets/Certificados/SenacProgramadorIntermediario.pdf" target="blank">Programador de Sistemas Intermediário - Senac</a></li>
+                <a style="text-decoration: none" href="http://www.pauloportfolio.com/Certificados/SenacProgramadorIntermediario.pdf" target="blank">Programador de Sistemas Intermediário - Senac</a></li>
         </ul>
 
         <ul class="fa-ul mb-0">
             <li>
                 <i class="fa-li fa fa-trophy text-warning"></i>
-                <a style="text-decoration: none" href="assets/Certificados/2000306064-ITILFGB.pdf" target="blank">ITIL V3 Foundations - License 02345622-01-7N9D</a></li>
+                <a style="text-decoration: none" href="http://www.pauloportfolio.com/Certificados/2000306064-ITILFGB.pdf" target="blank">ITIL V3 Foundations - License 02345622-01-7N9D</a></li>
         </ul>
 
         <ul class="fa-ul mb-0">
@@ -53,19 +53,19 @@
         <ul class="fa-ul mb-0">
             <li>
                 <i class="fa-li fa fa-trophy text-warning"></i>
-                <a style="text-decoration: none" href="assets/Certificados/EYU CBS_COBIT 5.JPG" target="blank">COBIT 5 Foundations - Green Treinamentos</a></li>
+                <a style="text-decoration: none" href="http://www.pauloportfolio.com/Certificados/EYU%20CBS_COBIT%205.JPG" target="blank">COBIT 5 Foundations - Green Treinamentos</a></li>
         </ul>
 
         <ul class="fa-ul mb-0">
             <li>
                 <i class="fa-li fa fa-trophy text-warning"></i>
-                <a style="text-decoration: none" href="assets/Certificados/Paulo Bezerra - EYU E_EXCEL CHARTING (DASHBOARD) - 2016-09-09.gif" target="blank">Excel Charting - EY University</a></li>
+                <a style="text-decoration: none" href="http://www.pauloportfolio.com/Certificados/Paulo%20Bezerra%20-%20EYU%20E_EXCEL%20CHARTING%20(DASHBOARD)%20-%202016-09-09.gif" target="blank">Excel Charting - EY University</a></li>
         </ul>
 
         <ul class="fa-ul mb-0">
             <li>
                 <i class="fa-li fa fa-trophy text-warning"></i>
-                <a style="text-decoration: none" href="assets/Certificados/EXCEL_VBA_CERTIFICADO.gif" target="blank">Excel VBA - EY University</a></li>
+                <a style="text-decoration: none" href="http://www.pauloportfolio.com/Certificados/EXCEL_VBA_CERTIFICADO.gif" target="blank">Excel VBA - EY University</a></li>
         </ul>
 
         <ul class="fa-ul mb-0">
@@ -76,13 +76,13 @@
         <ul class="fa-ul mb-0">
             <li>
                 <i class="fa-li fa fa-trophy text-warning"></i>
-                <a style="text-decoration: none" href="assets/Certificados/Logica_impacta.JPG" target="blank">Lógica em Programação - Impacta</a></li>
+                <a style="text-decoration: none" href="http://www.pauloportfolio.com/Certificados/Logica_impacta.JPG" target="blank">Lógica em Programação - Impacta</a></li>
         </ul>
 
         <ul class="fa-ul mb-0">
             <li>
                 <i class="fa-li fa fa-trophy text-warning"></i>
-                <a style="text-decoration: none" href="assets/Certificados/CERTIFICADO_SENAI.pdf" target="blank">Competência Transversal - Tecnologia da informação e da comunicação - SENAI</a></li>
+                <a style="text-decoration: none" href="http://www.pauloportfolio.com/Certificados/CERTIFICADO_SENAI.pdf" target="blank">Competência Transversal - Tecnologia da informação e da comunicação - SENAI</a></li>
         </ul>
 
 
