--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,40 +8,47 @@
 </ion-header>
 
 <ion-content padding>
-    <div class="list card">
+    <ion-card>
 
-        <div class="item item-avatar">
-            <img src="assets/icon/profile.jpg" style='width: 25%;height: 25%;'>
-            <h2><strong>Paulo Henrique Bezerra</strong></h2>
+        <ion-item>
+
+            <ion-avatar item-start>
+                <img src="assets/icon/profile.jpg">
+            </ion-avatar>
+            <h2>Paulo Henrique Bezerra</h2>
             <p>29 de Janeiro de 1990</p>
-        </div>
+            <a ion-item (click)="mostrarModal()">
+                Mais Detalhes
+            </a>
 
-        <div class="item item-body">
-           <p>
+        </ion-item>
+
+
+        <ion-card-content>
+            <p><strong>
                 Paulo é Analista de Sistemas/Dados com experiência profissional
-                de 5 anos em implantação de sistemas em Java Web/Dektop usando 
-                banco de dados MySQL e PostgreSQL, criação e alteração de 
-                relatórios de análise de performance e gerencial no ramo 
-                logístico (MIS), com manipulação de dados extraídos de 
-                base SQL. Possui também grande conhecimento em HTML, 
+                de 5 anos em desenvolvimento e implantação de sistemas em Java
+                Web/Dektop usando banco de dados MySQL e PostgreSQL, criação e alteração de
+                relatórios de análise de performance e gerencial no ramo
+                logístico (MIS), com manipulação de dados extraídos de
+                base SQL. Possui também grande conhecimento em HTML,
                 Javascript, CSS, Bootstrap, Git, Maven, Servidores Linux
-                e Virtualização Azure. Possui também ampla experiência 
+                e Virtualização Azure. Possui também ampla experiência
                 com o pacote Office, especialmente com Excel o qual possui
-                conhecimento em criação, manutenção e automação de 
-                templates de indicadores de desempenho. Atuou por mais 
-                de 1 ano como assistente administrativo na Deloitte, 
-                por 6 meses como analista de suporte na Nestlé, atuou 
-                de 2014 a 2018 no Suporte da Ernst & Young atuando 
-                também na área de gerenciamento de indicadores de 
-                performance e atualmente é Analista de Dados na MCI 
+                conhecimento em criação, manutenção e automação de
+                templates de indicadores de desempenho. Atuou por mais
+                de 1 ano como assistente administrativo na Deloitte,
+                por 6 meses como analista de suporte na Nestlé, atuou
+                de 2014 a 2018 no Suporte da Ernst & Young atuando
+                também na área de gerenciamento de indicadores de
+                performance e atualmente é Analista de Dados na MCI
                 Brasil responsável pelo gerenciamento de todos os dados
                 de projetos e comerciais.
-            </p>
+            </strong></p>
             <p>
             </p>
-        </div>
-
-    </div>
+        </ion-card-content>
+    </ion-card>
 
     <button ion-button secondary menuToggle>Ver Menu</button>
 </ion-content>
