--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 
     </head>
     
-    <body background="assets/icon/background.png" style="opacity: 0.7;">
+    <body background="assets/icon/background.jpg" style="opacity: 0.7;">
 
         <!-- Ionic's root component and where the app will load -->
     <ion-app></ion-app>
