--- a/src/pages/contatos/contatos.html
+++ b/src/pages/contatos/contatos.html
@@ -20,16 +20,17 @@
 
     <form [formGroup]="recado" (ngSubmit)="enviarSMS()">
         <ion-item>
-            <ion-label><strong>Deixar Recado</strong> <ion-icon ios="ios-chatboxes" md="md-chatboxes"></ion-icon>
+            <ion-label><strong>Deixar Recado</strong>
+                <ion-icon ios="ios-chatboxes" md="md-chatboxes"></ion-icon>
             </ion-label>
         </ion-item>
 
         <ion-item>
-            <ion-label>Remetente: </ion-label>
+            <ion-label stacked><strong>Remetente: </strong></ion-label>
             <ion-input type="text" placeholder="Deixe seu nome" formControlName="remetente" required></ion-input>
         </ion-item>
         <ion-item>
-            <ion-label>Mensagem: </ion-label>
+            <ion-label stacked><strong>Mensagem: </strong></ion-label>
             <ion-textarea placeholder="Deixe sua mensagem aqui" formControlName="mensagem"></ion-textarea>
         </ion-item>
         <button ion-button clear type="submit" large [disabled]="!recado.valid"><strong>Enviar </strong></button>
