--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,7 +18,7 @@
             <h2>Paulo Henrique Bezerra</h2>
             <p>29 de Janeiro de 1990</p>
             <a ion-item (click)="mostrarModal()">
-                Mais Detalhes
+                Detalhes
             </a>
 
         </ion-item>
