--- a/src/pages/modal/modal.html
+++ b/src/pages/modal/modal.html
@@ -36,16 +36,12 @@
         {{dados[0].ocupacao}}
       </ion-note>
     </ion-item>
-
   </ion-list>
-  <ion-card>
-    <ion-label>Hobbies: </ion-label>
-    <ion-card-content>{{hbformat}},
-
-    </ion-card-content>
-    <!--*ngFor="let hobbies of hobbies ; let i = index"-->
-
-  </ion-card>
+  <ion-item>
+    <ion-label floating>Hobbies</ion-label>
+    <ion-textarea [readonly]="readonly"  type="text" value="{{hbformat}}, "></ion-textarea>
+    </ion-item>
+  <!--*ngFor="let hobbies of hobbies ; let i = index"-->
   <ion-row *ngFor="let row of grid" direction="x" style="height:200px; min-height: 200px;">
     <img ng-repeat="image in images" [(ngModel)]="images" src="{images.src}" />
   </ion-row>
