--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <meta charset="UTF-8">
-        <title>Paulo Portfólio</title>
-        <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <meta name="format-detection" content="telephone=no">
-        <meta name="msapplication-tap-highlight" content="no">
 
-        <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
-        <link rel="manifest" href="manifest.json">
-        <meta name="theme-color" content="#4e8ef7">
+<head>
+    <meta charset="UTF-8">
+    <title>Paulo Portfólio</title>
+    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="msapplication-tap-highlight" content="no">
 
-        <!-- add to homescreen for ios -->
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#4e8ef7">
 
-        <!-- cordova.js required for cordova apps (remove if not needed) -->
-        <script src="cordova.js"></script>
+    <!-- add to homescreen for ios -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-        <!-- un-comment this code to enable service worker
+    <!-- cordova.js required for cordova apps (remove if not needed) -->
+    <script src="cordova.js"></script>
+
+    <!-- un-comment this code to enable service worker
         <script>
           if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('service-worker.js')
@@ -27,13 +28,23 @@
           }
         </script>-->
 
-        <link href="build/main.css" rel="stylesheet">
+    <link href="build/main.css" rel="stylesheet">
 
-    </head>
-    
-    <body background="assets/icon/background.jpg" style="opacity: 0.7;">
+</head>
+<style>
+    html {
+        background: url('assets/icon/background.jpg') no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: inherit;
+        opacity: 0.8;
+    }
+</style>
 
-        <!-- Ionic's root component and where the app will load -->
+<body class='html'>
+
+    <!-- Ionic's root component and where the app will load -->
     <ion-app></ion-app>
 
     <!-- The polyfills js is generated during the build process -->
@@ -47,4 +58,5 @@
     <script src="build/main.js"></script>
 
 </body>
+
 </html>
