--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -32,7 +32,7 @@
                 relatórios de análise de performance e gerencial no ramo
                 logístico (MIS), com manipulação de dados extraídos de
                 base SQL. Possui também grande conhecimento em HTML,
-                Javascript, CSS, Bootstrap, Git, Maven, Servidores Linux
+                Javascript, CSS, Bootstrap, Git, Maven, Ionic 3, Servidores Linux
                 e Virtualização Azure. Possui também ampla experiência
                 com o pacote Office, especialmente com Excel o qual possui
                 conhecimento em criação, manutenção e automação de
