--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,7 @@
         <ion-item>
 
             <ion-avatar item-start>
-                <img src="assets/icon/profile.jpg">
+                <img (click)="mostrarFoto()" src="assets/icon/profile.jpg">
             </ion-avatar>
             <h2><strong>Paulo Henrique Bezerra</strong></h2>
             <p><strong>29 de Janeiro de 1990</strong></p>
