--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,7 +15,7 @@
             <ion-avatar item-start>
                 <img (click)="mostrarFoto()" src="assets/icon/profile.jpg">
             </ion-avatar>
-            <h2><strong>Paulo Henrique Bezerra</strong></h2>
+            <h2>Paulo Henrique Bezerra</h2>
             <p><strong>29 de Janeiro de 1990</strong></p>
             <a ion-item (click)="mostrarModal()">
                 Detalhes
