--- a/src/pages/foto/foto.html
+++ b/src/pages/foto/foto.html
@@ -8,6 +8,12 @@
 
   <ion-navbar>
     <ion-title>foto</ion-title>
+    <ion-buttons start>
+        <button ion-button (click)="fecharFoto()">
+          <span ion-text color="primary" showWhen="ios">Fechar</span>
+          <ion-icon name="md-close" showWhen="android, windows"></ion-icon>
+        </button>
+      </ion-buttons>
   </ion-navbar>
 
 </ion-header>
