--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,32 +18,34 @@
             <h2>Paulo Henrique Bezerra</h2>
             <p><strong>29 de Janeiro de 1990</strong></p>
             <a ion-item (click)="mostrarModal()">
-                Detalhes
+                    <ion-note item-end>
+                        <strong>Detalhes </strong><img src="assets/icon/details.png" style="width: 10%; height: 10%;">
+                    </ion-note>
             </a>
 
         </ion-item>
 
         <ion-card-content>
             <p ion-text color="black" style="background-color: transparent;"><strong>
-                Paulo é Analista de Sistemas/Dados com experiência profissional
-                de 5 anos em desenvolvimento e implantação de sistemas em Java
-                Web/Dektop usando banco de dados MySQL e PostgreSQL, criação e alteração de
-                relatórios de análise de performance e gerencial no ramo
-                logístico (MIS), com manipulação de dados extraídos de
-                base SQL. Possui também grande conhecimento em HTML,
-                Javascript, CSS, Bootstrap, Git, Maven, Ionic 3, Servidores Linux
-                e Virtualização Azure. Possui também ampla experiência
-                com o pacote Office, especialmente com Excel o qual possui
-                conhecimento em criação, manutenção e automação de
-                templates de indicadores de desempenho. Atuou por mais
-                de 1 ano como assistente administrativo na Deloitte,
-                por 6 meses como analista de suporte na Nestlé, atuou
-                de 2014 a 2018 no Suporte da Ernst & Young atuando
-                também na área de gerenciamento de indicadores de
-                performance e atualmente é Analista de Dados na MCI
-                Brasil responsável pelo gerenciamento de todos os dados
-                de projetos e comerciais.
-            </strong></p>
+                    Paulo é Analista de Sistemas/Dados com experiência profissional
+                    de 5 anos em desenvolvimento e implantação de sistemas em Java
+                    Web/Dektop usando banco de dados MySQL e PostgreSQL, criação e alteração de
+                    relatórios de análise de performance e gerencial no ramo
+                    logístico (MIS), com manipulação de dados extraídos de
+                    base SQL. Possui também grande conhecimento em HTML,
+                    Javascript, CSS, Bootstrap, Git, Maven, Ionic 3, Servidores Linux
+                    e Virtualização Azure. Possui também ampla experiência
+                    com o pacote Office, especialmente com Excel o qual possui
+                    conhecimento em criação, manutenção e automação de
+                    templates de indicadores de desempenho. Atuou por mais
+                    de 1 ano como assistente administrativo na Deloitte,
+                    por 6 meses como analista de suporte na Nestlé, atuou
+                    de 2014 a 2018 no Suporte da Ernst & Young atuando
+                    também na área de gerenciamento de indicadores de
+                    performance e atualmente é Analista de Dados na MCI
+                    Brasil responsável pelo gerenciamento de todos os dados
+                    de projetos e comerciais.
+                </strong></p>
             <p>
             </p>
         </ion-card-content>
