--- a/src/pages/flash/flash.html
+++ b/src/pages/flash/flash.html
@@ -4,27 +4,45 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<!--ion-header>
 
+  <ion-navbar>
+    <ion-buttons start>
+      <button ion-button (click)="fecharFlash()">
+        <span ion-text color="primary" showWhen="ios">Fechar</span>
+        <ion-icon name="md-close" showWhen="android, windows"></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-title>Lanterna</ion-title>
+  </ion-navbar>
+
+</ion-header-->
+
+<ion-header>
   <ion-navbar>
       <button ion-button menuToggle>
           <ion-icon name="menu"></ion-icon>
       </button>
-    <ion-title>Lanterna</ion-title>
+      <ion-title>Lanterna</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
 
-    <ion-item>
+    <!--ion-item>
         <button ion-button clear large (click)="ligarLanterna()"><strong>Ligar Lanterna </strong></button>
         <ion-icon ios="ios-flash" md="md-flash"></ion-icon>
       </ion-item>
     <ion-item>
         <button ion-button clear large (click)="desligarLanterna()"><strong>Desligar Lanterna </strong></button>
         <ion-icon ios="ios-flash" md="md-flash"></ion-icon>
+      </ion-item-->
+
+      <ion-item>
+        <ion-label>Ligar/Desligar</ion-label>
+        <ion-toggle (ionChange)="lanternaSwitch()"></ion-toggle>
       </ion-item>
+
 
 </ion-content>
