--- a/src/pages/experiencia/experiencia.html
+++ b/src/pages/experiencia/experiencia.html
@@ -13,7 +13,7 @@
         <h2 style="color: rgb(44, 41, 8)" class="title"><strong>Analista de Dados</strong></h2>
     </div>
     <div class="bar bar-subheader">
-        <h4 style="color: rgb(44, 41, 8)" class="title"><strong>MCI Brasil</strong>  Junho 2018 - Atualmente</h4>
+        <h4 style="color: rgb(44, 41, 8)" class="title"><strong><img src="assets/icon/mci.png" style="width: 20%"></strong>  Junho 2018 - Atualmente</h4>
     </div>
     <p>Atua como analista de dados a cargo de organizar toda a parte de troca de informações 
         entre areas e sistemas, atuando também com desenvolvimento em Java Web a fim de 
@@ -58,7 +58,7 @@
         <h2 style="color: rgb(44, 41, 8)" class="title"><strong>Coordenador de Implantação</strong></h2>
     </div>
     <div class="bar bar-subheader">
-        <h4 style="color: rgb(44, 41, 8)" class="title"><strong><img src="assets/icon/flash.png" style = "width: 20%"></strong>  Novembro 2008 - Outubro 2013</h4>
+        <h4 style="color: rgb(44, 41, 8)" class="title"><strong><img src="assets/icon/flash.png" style = "width: 25%"></strong>  Novembro 2008 - Outubro 2013</h4>
     </div>
     <p>Atuou como Coordenador de Implantação e homologador de sistemas no 
         ramo logístico atuando com levantamento de informações e requisitos 
