--- a/src/index.html
+++ b/src/index.html
@@ -39,9 +39,9 @@
 
     <!-- Ionic's root component and where the app will load -->
     <ion-app>
-        <script>
+        <!--script>
             alert('Bem-Vindo');
-        </script>
+        </script-->
 
     </ion-app>
 
