--- a/src/pages/mais/mais.html
+++ b/src/pages/mais/mais.html
@@ -16,31 +16,31 @@
 
 <ion-content padding>
   <ion-content class="card-background-page">
-      <ion-card>
-          <img src="assets/icon/portfolio.png" class="contrast"/>
-          <div class="card-title">Portfólio</div>
-          <div class="card-subtitle"><a href="http://www.pauloportfolio.com" style="text-decoration: none;" target="blank">Acessar</a></div>
-        </ion-card>
-    <ion-card>
+      <ion-card><a href="http://www.pauloportfolio.com" style="text-decoration: none; color: #fff" target="blank">
+          <img src="assets/icon/portfolio.png"  class="contrast"/>
+          <div class="card-title"></div>
+          <!--div class="card-subtitle"><a href="http://www.pauloportfolio.com" style="text-decoration: none; color: #fff" target="blank">Acessar</a></div-->
+        </a></ion-card>
+    <ion-card><a href="https://github.com/phbrazil" style="text-decoration: none; color: #00FF41" target="blank">
       <img src="assets/icon/github.jpg" class="contrast" />
       <div class="card-title">GitHub</div>
-      <div class="card-subtitle"><a href="https://github.com/phbrazil" style="text-decoration: none;" target="blank">Acessar</a></div>
-    </ion-card>
-    <ion-card>
+      <!--div class="card-subtitle"><a href="https://github.com/phbrazil" style="text-decoration: none; color: #00FF41" target="blank">Acessar</a></div-->
+    </a></ion-card>
+    <ion-card><a (click)="novoEmail()" style="color: #00FF41">
         <img src="assets/icon/email.png" class="contrast" />
         <div class="card-title">E-Mail</div>
-        <div class="card-subtitle"><a (click)="novoEmail()">Enviar</a></div>
-      </ion-card>
+        <!--div class="card-subtitle"><a (click)="novoEmail()" style="color: #00FF41">Enviar</a></div-->
+     </a> </ion-card>
       <ion-card>
           <img src="assets/icon/facebook.png" class="contrast" />
           <div class="card-title">Facebook</div>
-          <div class="card-subtitle"><a href="https://www.facebook.com/paulo.henrique.bezerra.1990" style="text-decoration: none;" target="blank">Acessar</a></div>
+          <!--div class="card-subtitle"><a href="https://www.facebook.com/paulo.henrique.bezerra.1990" style="text-decoration: none; color: #00FF41" target="blank">Acessar</a></div-->
         </ion-card>
-        <ion-card>
+        <ion-card><a href="https://www.facebook.com/paulo.henrique.bezerra.1990" style="text-decoration: none; color: #00FF41" target="blank">
             <img src="assets/icon/instagram.png" class="contrast" />
             <div class="card-title">Instagram</div>
-            <div class="card-subtitle"><a href="https://www.instagram.com/phbrazil/?hl=en" style="text-decoration: none;" target="blank">Acessar</a></div>
-          </ion-card>
+            <div class="card-subtitle"><a href="https://www.instagram.com/phbrazil/?hl=en" style="text-decoration: none; color: #00FF41" target="blank">Acessar</a></div>
+          </a></ion-card>
 
   </ion-content>
 
