--- a/src/pages/mais/mais.html
+++ b/src/pages/mais/mais.html
@@ -16,6 +16,11 @@
 
 <ion-content padding>
   <ion-content class="card-background-page">
+      <ion-card><a href="https://www.linkedin.com/in/paulo-bezerra-47411579/" style="text-decoration: none; color: #fff" target="blank">
+        <img src="assets/icon/linkedin.png" class="contrast" />
+        <div class="card-title">Linkedin</div>
+        <!--div class="card-subtitle"><a href="http://www.pauloportfolio.com" style="text-decoration: none; color: #fff" target="blank">Acessar</a></div-->
+      </a></ion-card>
     <ion-card><a href="http://www.pauloportfolio.com" style="text-decoration: none; color: #fff" target="blank">
         <img src="assets/icon/portfolio.png" class="contrast" />
         <div class="card-title"></div>
