--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,7 @@
         <ion-item>
 
             <ion-avatar item-start>
-                <img (click)="mostrarFoto()" src="assets/icon/profile.jpg">
+                <img (click)="mostrarFoto()" src="assets/icon/perfil.png" style="width: 40px; height: 40px;">
             </ion-avatar>
             <h2>Paulo Henrique Bezerra</h2>
             <p><strong>29 de Janeiro de 1990</strong></p>
